# Omega-PHR

./: .coverage  .coverage.Chandus-MacBook-Pro.local.4451.XeKZamcx  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILD_VALIDATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  deploy.sh  docker-compose.yml  pyproject.toml  pytest-ci.toml  repository_fixes.py  requirements-ci.txt  ruff_errors.json  smart-deploy.sh  validate-build.sh
.github/workflows/: ci.yml  pre-commit.yml
.omega_vault/: quarantine_index.json  test-hash-2.omega
docker/: hive.Dockerfile  timeline.Dockerfile
docs/: conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  requirements.txt  services.rst
docs/api/: modules.rst  omega_phr.rst
docs/research/: adversarial_hive_system.rst  temporal_paradox_engine.rst
libs/auth/: jwt_utils.py  secrets_manager.py
libs/logging/: formatter.py  structured_logger.py
libs/proto_helpers/: codegen.py
omega_phr/: __init__.py  cli.py  config.py  exceptions.py  hive.py  loops.py  memory.py  models.py  omega_register.py  timeline.py
omega_phr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/hive_orchestrator/: config.py  main.py  server.py
services/hive_orchestrator/app/: __init__.py  agent.py  config.py  coordinator.py  strategy.py  swarm.py
services/hive_orchestrator/proto/: hive.proto
services/memory_inversion/: config.py  main.py  requirements.txt
services/omega_register/: config.py  main.py  requirements.txt
services/recursive_loop_synth/: config.py  main.py  requirements.txt
services/telemetry_exporter/: config.py  main.py  requirements.txt
services/timeline_lattice/: config.py  main.py  models.py  repository.py  requirements.txt  server.py  timeline_pb2.py  timeline_pb2_grpc.py
services/timeline_lattice/app/: __init__.py  client.py  client_simple.py  config.py  crypto.py  models.py  repository.py  server.py  server_complex.py  server_simple.py
services/timeline_lattice/proto/: timeline.proto
tests/: test_basic.py  test_omega_phr.py
tests/e2e/: test_e2e_workflows.py
tests/unit/: test_omega_phr_core.py
